src/test/deca/context/valid/homemade/same_names.deca

class A {
    int x;
    void setX(int x) {
        this.x = x;
    }
}

{
    A a = new A();
    a.setX(5);
}