src/test/deca/context/invalid/homemade/void_field.deca
// trying to give the void type to a field

class A {
    int y;
    float z;
    boolean b;
    protected void x;
}